fix plans headers wrapping

--- a/dev/scss/includes/_industries.scss
+++ b/dev/scss/includes/_industries.scss
@@ -207,7 +207,7 @@
 
     h4{
       color:$citrus;
-      font-size:30px;
+      font-size:28px;
     }
   }
 
